# supernova-editor

./: .gitmodules  CMakeLists.txt  ComponentAddDialog.h  LICENSE  README.md  copy_headers.cmake  generate_shaders.cmake
.github/workflows/: cmake.yml  engine-android.yml  engine-cmake.yaml  engine-emscripten.yaml  engine-xcode.yaml
editor/: App.cpp  App.h  AppSettings.cpp  AppSettings.h  Backend.h  Canvas.cpp  Canvas.h  Catalog.cpp  Catalog.h  Conector.cpp  Conector.h  Configs.h  EditorFrame.cpp  EditorFrame.h  EditorSystem.cpp  EditorSystem.h  EngineCanvas.cpp  EngineCanvas.h  Exporter.cpp  Exporter.h  Factory.cpp  Factory.h  Frame.cpp  Frame.h  Generator.cpp  Generator.h  Log.cpp  Log.h  Metadata.cpp  Metadata.h  Out.cpp  Out.h  Platform.cpp  Platform.h  Project.cpp  Project.h  Stream.cpp  Stream.h  Structure.cpp  Structure.h  (+4 more)
editor/backend/: BackendGLFW.cpp  BackendGLFW.h  BackendSDL.cpp
editor/command/: Command.h  CommandHandle.cpp  CommandHandle.h  CommandHistory.cpp  CommandHistory.h  CreateEntityCmd.cpp  CreateEntityCmd.h  CreateEntityCommand.cpp  CreateEntityCommand.h
editor/command/type/: AddChildSceneCmd.cpp  AddChildSceneCmd.h  AddComponentCmd.cpp  AddComponentCmd.h  AddEntityToBundleCmd.cpp  AddEntityToBundleCmd.h  ChangeEntityNameCmd.cpp  ChangeEntityNameCmd.h  ChangeObjTransfCmd.cpp  ChangeObjTransfCmd.h  ChangePropertyCmd.h  ChangeVec3Cmd.cpp  ChangeVec3Cmd.h  ComponentToBundleLocalCmd.cpp  ComponentToBundleLocalCmd.h  ComponentToBundleSharedCmd.cpp  ComponentToBundleSharedCmd.h  ComponentToLocalCmd.cpp  ComponentToLocalCmd.h  ComponentToSharedCmd.cpp  ComponentToSharedCmd.h  CopyFileCmd.cpp  CopyFileCmd.h  CreateDirCmd.cpp  CreateDirCmd.h  CreateEntityBundleCmd.cpp  CreateEntityBundleCmd.h  CreateEntityCmd.cpp  CreateEntityCmd.h  CreateMaterialFileCmd.cpp  CreateMaterialFileCmd.h  CreateSceneCmd.cpp  CreateSceneCmd.h  DeleteEntityCmd.cpp  DeleteEntityCmd.h  DeleteFileCmd.cpp  DeleteFileCmd.h  DuplicateEntityCmd.cpp  DuplicateEntityCmd.h  EntityNameCmd.cpp  (+42 more)
editor/fonts/: fa-solid-900_ttf.h
editor/layout/: Console.cpp  Console.h  Objects.h  Properties.cpp
editor/render/: Gimbal.cpp  Gimbal.h  Gizmos.cpp  Gizmos.h  LineDrawUtils.h  RenderUtil.h  SceneRender.cpp  SceneRender.h  SceneRender2D.cpp  SceneRender2D.h  SceneRender3D.cpp  SceneRender3D.h  ToolsLayer.cpp  ToolsLayer.h  UILayer.cpp  UILayer.h  ViewportGizmo.cpp  ViewportGizmo.h
editor/render/gizmo/: AnchorGizmo.cpp  AnchorGizmo.h  Object2DGizmo.cpp  Object2DGizmo.h  RotateGizmo.cpp  RotateGizmo.h  ScaleGizmo.cpp  ScaleGizmo.h  TranslateGizmo.cpp  TranslateGizmo.h  ViewportGizmo.cpp  ViewportGizmo.h
editor/render/material/: MaterialRender.cpp  MaterialRender.h
editor/render/preview/: DirectionRender.cpp  DirectionRender.h  MaterialRender.cpp  MaterialRender.h  MeshPreviewRender.cpp  MeshPreviewRender.h  ModelRender.cpp  ModelRender.h
editor/resources/icons/: bulb-icon_png.h  camera-icon_png.h  entity-icon_png.h  file-icon_png.h  folder-icon_png.h  scene-icon_png.h  spot-icon_png.h  sun-icon_png.h
editor/resources/sky/: Daylight_Box_Back_png.h  Daylight_Box_Bottom_png.h  Daylight_Box_Front_png.h  Daylight_Box_Left_png.h  Daylight_Box_Right_png.h  Daylight_Box_Top_png.h
editor/shader/: ShaderBuilder.cpp  ShaderBuilder.h
editor/sky/: Daylight_Box_Back_png.h  Daylight_Box_Bottom_png.h  Daylight_Box_Front_png.h  Daylight_Box_Left_png.h  Daylight_Box_Right_png.h  Daylight_Box_Top_png.h
editor/util/: BackendUtils.cpp  BackendUtils.h  EntityBundle.cpp  EntityBundle.h  EntityPayload.h  EventBus.h  FileDialogs.h  FileUtils.h  GLloader.h  GraphicUtils.cpp  GraphicUtils.h  ProjectUtils.cpp  ProjectUtils.h  ResourceProgress.cpp  ResourceProgress.h  SHA1.h  ScopedDefaultEntityPool.h  ScriptParser.cpp  ScriptParser.h  ShapeParameters.h  SharedGroup.cpp  SharedGroup.h  UIUtils.cpp  UIUtils.h  Util.h
editor/window/: AnimationWindow.cpp  AnimationWindow.h  CodeEditor.cpp  CodeEditor.h  Console.cpp  Console.h  LoadingWindow.cpp  LoadingWindow.h  Objects.cpp  Objects.h  Output.cpp  Output.h  OutputWindow.cpp  OutputWindow.h  ProjectSaveDialog.cpp  ProjectSaveDialog.h  ProjectWindow.cpp  ProjectWindow.h  Properties.cpp  Properties.h  ResourcesWindow.cpp  ResourcesWindow.h  SceneSaveDialog.cpp  SceneSaveDialog.h  SceneWindow.cpp  SceneWindow.h  ScriptCreateDialog.cpp  ScriptCreateDialog.h  Structure.cpp  Structure.h  Widgets.h
editor/window/dialog/: ComponentAddDialog.cpp  ComponentAddDialog.h  ExportWindow.cpp  ExportWindow.h  ProjectSaveDialog.cpp  ProjectSaveDialog.h  ProjectSettingsWindow.cpp  ProjectSettingsWindow.h  SceneSaveDialog.cpp  SceneSaveDialog.h  ScriptCreateDialog.cpp  ScriptCreateDialog.h  SpriteSheetSlicerDialog.cpp  SpriteSheetSlicerDialog.h  SpriteSlicerToolDialog.cpp  SpriteSlicerToolDialog.h  TextureSlicerToolDialog.cpp  TextureSlicerToolDialog.h
editor/window/widget/: CustomTextEditor.cpp  CustomTextEditor.h  SemanticSuggestions.cpp  SemanticSuggestions.h
engine/: .gitignore  CMakeLists.txt  CMakeLists_project.txt  README.md
engine/.github/: FUNDING.yml
engine/.github/workflows/: build-tool.yml  cmake-desktop.yml  xcode-template.yml
engine/core/: Doriax.h  Engine.cpp  Engine.h  Export.h  Input.cpp  Input.h  Log.cpp  Log.h  Scene.cpp  Scene.h  System.cpp  System.h
engine/core/action/: Action.cpp  Action.h  AlphaAction.cpp  AlphaAction.h  Animation.cpp  Animation.h  ColorAction.cpp  ColorAction.h  Ease.h  Particles.cpp  Particles.h  PositionAction.cpp  PositionAction.h  RotationAction.cpp  RotationAction.h  ScaleAction.cpp  ScaleAction.h  SpriteAnimation.cpp  SpriteAnimation.h  TimedAction.cpp  TimedAction.h
engine/core/buffer/: Attribute.cpp  Attribute.h  Buffer.cpp  Buffer.h  ExternalBuffer.cpp  ExternalBuffer.h  IndexBuffer.cpp  IndexBuffer.h  InterleavedBuffer.cpp  InterleavedBuffer.h
engine/project/: CMakeLists.txt  main.cpp
engine/tools/: doriax.py  supershader.py
libs/ImGuiColorTextEdit/: TextEditor.cpp
shadercompiler/: CMakeLists.txt
shadercompiler/src/: CMakeLists.txt  args.cc  glslang.cc  input.cc  shadercompiler.h  spirvcross.cc
(+322 files in other folders)
